[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1a"
path = "src/1a.rs"

[[bin]]
name = "1b"
path = "src/1b.rs"

[[bin]]
name = "2a"
path = "src/2a.rs"

[[bin]]
name = "2b"
path = "src/2b.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
